--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 18px;
     line-height: 1.42857143;
-    color: #333;
+    color: #fff;
     background-color: #fff;
 }
 /*NAVBAR*/
@@ -109,12 +109,12 @@ body {
     font-weight: 300;
     padding: auto;
 }
-.hero2 .text {
+.text {
     margin:20px 0px;
     font-size: 64px;
     text-align: center;
 }
-.hero2 .text h1 {
+.text h1 {
     font-size: 44px;
     font-family: 'Open Sans','Segoe UI','Droid Sans',Tahoma,Arial,sans-serif;
 }
@@ -174,6 +174,19 @@ a {
     font-weight: 400;
     color: #616161;
 }
+
+.full {
+    position: relative;
+    overflow: hidden;
+    height: 550px;
+    width: 100%;
+}
+
+.carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
 
 /*FOOTER*/
 #footer {
